crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/039.cypher
MATCH (n) WHERE n.name = $name RETURN n; MATCH (m) WHERE m.name = 'admin' RETURN m.secret
